pkg/front_end/testcases/unified_collections/invariance.dart.strong.transformed.expect
library /*isLegacy*/;
//
// Problems in library:
//
// pkg/front_end/testcases/unified_collections/invariance.dart:5:1: Error: Library doesn't support null safety.
// // @dart=2.9
// ^^^^^^^^^^^^
//
import self as self;
import "dart:core" as core;
import "dart:collection" as col;

static method main() → dynamic {
  core::List<core::int*>* list1 = core::_GrowableList::_literal1<core::int*>(0);
  core::List<core::num*>* list2 = core::_GrowableList::_literal1<core::num*>(0);
  dynamic list3 = core::_GrowableList::_literal1<core::int*>(0);
  core::List<core::int*>* list = block {
    final core::List<core::int*>* #t1 = core::_GrowableList::_literal1<core::int*>(0);
    #t1.{core::List::addAll}{Invariant}(list1){(core::Iterable<core::int*>*) →* void};
    {
      synthesized core::Iterator<core::num*>* :sync-for-iterator = list2.{core::Iterable::iterator}{core::Iterator<core::num*>*};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final dynamic #t2 = :sync-for-iterator.{core::Iterator::current}{core::num*};
        {
          final core::int* #t3 = #t2 as{TypeError,ForLegacy} core::int*;
          #t1.{core::List::add}{Invariant}(#t3){(core::int*) →* void};
        }
      }
    }
    {
      synthesized core::Iterator<dynamic>* :sync-for-iterator = (list3 as{TypeError,ForDynamic,ForLegacy} core::Iterable<dynamic>*).{core::Iterable::iterator}{core::Iterator<dynamic>*};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final dynamic #t4 = :sync-for-iterator.{core::Iterator::current}{dynamic};
        {
          final core::int* #t5 = #t4 as{TypeError,ForLegacy} core::int*;
          #t1.{core::List::add}{Invariant}(#t5){(core::int*) →* void};
        }
      }
    }
    if(true)
      #t1.{core::List::add}{Invariant}(2){(core::int*) →* void};
  } =>#t1;
  core::Set<core::int*>* set1 = block {
    final core::Set<core::int*>* #t6 = new col::_Set::•<core::int*>();
    #t6.{core::Set::add}{Invariant}(0){(core::int*) →* core::bool*};
  } =>#t6;
  core::Set<core::num*>* set2 = block {
    final core::Set<core::num*>* #t7 = new col::_Set::•<core::num*>();
    #t7.{core::Set::add}{Invariant}(0){(core::num*) →* core::bool*};
  } =>#t7;
  dynamic set3 = block {
    final core::Set<core::int*>* #t8 = new col::_Set::•<core::int*>();
    #t8.{core::Set::add}{Invariant}(0){(core::int*) →* core::bool*};
  } =>#t8;
  core::Set<core::int*>* set = block {
    final core::Set<core::int*>* #t9 = new col::_Set::•<core::int*>();
    #t9.{core::Set::add}{Invariant}(0){(core::int*) →* core::bool*};
    #t9.{core::Set::addAll}{Invariant}(set1){(core::Iterable<core::int*>*) →* void};
    {
      synthesized core::Iterator<core::num*>* :sync-for-iterator = set2.{core::Iterable::iterator}{core::Iterator<core::num*>*};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final dynamic #t10 = :sync-for-iterator.{core::Iterator::current}{core::num*};
        {
          final core::int* #t11 = #t10 as{TypeError,ForLegacy} core::int*;
          #t9.{core::Set::add}{Invariant}(#t11){(core::int*) →* core::bool*};
        }
      }
    }
    {
      synthesized core::Iterator<dynamic>* :sync-for-iterator = (set3 as{TypeError,ForDynamic,ForLegacy} core::Iterable<dynamic>*).{core::Iterable::iterator}{core::Iterator<dynamic>*};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final dynamic #t12 = :sync-for-iterator.{core::Iterator::current}{dynamic};
        {
          final core::int* #t13 = #t12 as{TypeError,ForLegacy} core::int*;
          #t9.{core::Set::add}{Invariant}(#t13){(core::int*) →* core::bool*};
        }
      }
    }
    if(true)
      #t9.{core::Set::add}{Invariant}(2){(core::int*) →* core::bool*};
  } =>#t9;
  core::Map<core::int*, core::String*>* map1 = <core::int*, core::String*>{0: "foo"};
  core::Map<core::num*, core::Object*>* map2 = <core::num*, core::Object*>{0: "bar"};
  dynamic map3 = <core::int*, core::String*>{0: "baz"};
  core::Map<core::int*, core::String*>* map = block {
    final core::Map<core::int*, core::String*>* #t14 = <core::int*, core::String*>{};
    #t14.{core::Map::[]=}{Invariant}(0, "foo"){(core::int*, core::String*) →* void};
    #t14.{core::Map::addAll}{Invariant}(map1){(core::Map<core::int*, core::String*>*) →* void};
    {
      synthesized core::Iterator<core::MapEntry<core::int*, core::String*>>* :sync-for-iterator = map2.{core::Map::entries}{core::Iterable<core::MapEntry<core::int*, core::String*>>}.{core::Iterable::iterator}{core::Iterator<core::MapEntry<core::int*, core::String*>>*};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final core::MapEntry<dynamic, dynamic>* #t15 = :sync-for-iterator.{core::Iterator::current}{core::MapEntry<core::int*, core::String*>};
        {
          final core::int* #t16 = #t15.{core::MapEntry::key}{dynamic} as{TypeError,ForLegacy} core::int*;
          final core::String* #t17 = #t15.{core::MapEntry::value}{dynamic} as{TypeError,ForLegacy} core::String*;
          #t14.{core::Map::[]=}{Invariant}(#t16, #t17){(core::int*, core::String*) →* void};
        }
      }
    }
    {
      synthesized core::Iterator<core::MapEntry<core::int*, core::String*>>* :sync-for-iterator = (map3 as{TypeError,ForDynamic,ForLegacy} core::Map<dynamic, dynamic>*).{core::Map::entries}{core::Iterable<core::MapEntry<core::int*, core::String*>>}.{core::Iterable::iterator}{core::Iterator<core::MapEntry<core::int*, core::String*>>*};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final core::MapEntry<dynamic, dynamic>* #t18 = :sync-for-iterator.{core::Iterator::current}{core::MapEntry<core::int*, core::String*>};
        {
          final core::int* #t19 = #t18.{core::MapEntry::key}{dynamic} as{TypeError,ForLegacy} core::int*;
          final core::String* #t20 = #t18.{core::MapEntry::value}{dynamic} as{TypeError,ForLegacy} core::String*;
          #t14.{core::Map::[]=}{Invariant}(#t19, #t20){(core::int*, core::String*) →* void};
        }
      }
    }
    if(true)
      #t14.{core::Map::[]=}{Invariant}(2, "baz"){(core::int*, core::String*) →* void};
  } =>#t14;
}
